sample_manifest (65).yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: 'dpr-cuiaccessservice-production-java-prod'
  namespace: 'fdc'
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.allow-http: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: '3600'
    nginx.ingress.kubernetes.io/proxy-read-timeout: '3600'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '3600'
  labels:
    project: 'dpr-cuiaccessservice'
    branch: 'production'
    commit: '93c2558'
    role: java
    environment: 'prod'
spec:
  rules:
    - host: dpr-cuiaccessservice.kubeidc-prod.level3.com
      http:
        paths:
          - path: /
            backend:
              serviceName: 'dpr-cuiaccessservice-production-java-prod'
              servicePort: 9096
  tls:
    - hosts:
      - 'dpr-cuiaccessservice.kubeidc-prod.level3.com'
      secretName: managed-tls-secret
---
apiVersion: v1
kind: Service
metadata:
  name: 'dpr-cuiaccessservice-production-java-prod'
  namespace: 'fdc'
  labels:
    project: 'dpr-cuiaccessservice'
    branch: 'production'
    commit: '93c2558'
    role: java
    environment: 'prod'
spec:
  ports:
    - port: 9096
      targetPort: 9096
      protocol: TCP
  selector:
    project: 'dpr-cuiaccessservice'
    branch: 'production'
    commit: '93c2558'
    role: java
    environment: 'prod'
---
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: 'dpr-cuiaccessservice-production-java-prod'
  labels:
    project: 'dpr-cuiaccessservice'
    branch: 'production'
    commit: '93c2558'
    role: java
    environment: 'prod'
spec:
  selector:
    matchLabels:
      project: 'dpr-cuiaccessservice'
      branch: 'production'
      role: java
      environment: 'prod'
  replicas: 2
  revisionHistoryLimit: 0
  template:
    metadata:
      labels:
        project: 'dpr-cuiaccessservice'
        branch: 'production'
        commit: '93c2558'
        role: java
        environment: 'prod'
    spec:
      containers:
        - name: dpr-cuiaccessservice-production-java-prod
          image: 'nexusprod.corp.intranet:4567/dpr-services/dpr-cuiaccessservice/dpr-cuiaccessservice:production'
          imagePullPolicy: Always
          ports:
            - containerPort: 9096
              protocol: TCP
          resources:
            limits:
              memory: 1000Mi
      imagePullSecrets:
        - name: dpr-cuiaccessservice-production
---
---
